v7.1.0:
::internal changes
- rewrite downloader function
- add (yet unused) patching functions for PPF patches
- code cleanup, remove duplicated code

::bugfixes
- fixup The Legend of Zelda - Parallel Worlds patcher
- fixup --patch command line parameter

v7.0.0:
::internal changes
- add PATCHIMAGE_DIR new internal variable
- add PATCHIMAGE_DATABASE_DIR new internal variable
- add PATCHIMAGE_OVERRIDE_DIR new internal variable
- add UNP_EXTRA_ARGS new internal variable
- make check_input_rom a common.sh function, prevent duplicated code
- shift around some paths
- update database with New Super Mario Bros. Wii mods
- code review and improvements
- improved Debian GNU/Linux packaging
- install pre-compiled tools to /usr/lib/ARCH/patchimage (FHS compliance)
- improved --help message
- add --list-games parameter (show buildable games)
- --list-games and menu now show ID / Short Name and Full Name of all games
- add --override-szs to override Wiims Mario Kart Fun wit and szs with
  the ones supplied by patchimage. Use this if building Wiims Mario Kart Fun
  fails due to incompatible library versions being installed.
- add batch mode for generating more than one mod at once

::bug fixes
- several minor bugfixes and improvements
- before creating any of the directories defined in ${HOME}/.patchimage.rc
  check whether the parent directory is writeable, else fallback to ${HOME}
- when setting destination directory for created files, check if they are
  writeable, else fallback to ${HOME}
- fix telling user path to Hans Files for all Pokemon game hacks
- make the script more robust against directories with spaces in their names
- use gdown.pl for drive.google.* download links
- for download links on Mega tell user where to download manually
- for download links on Mediafire tell user where to download manually
- patchimage menu showed TMS1 as ID for Tokyo Mirage Sessions #FE restoration
  patcher, while TMSFE was the actual (but wrong ID), thus TMS1 was reported