@@ -12,6 +12,7 @@ b) ${PATCHIMAGE_WBFS_DIR}
 a) SMN?01.iso
 b) SMN?01.wbfs
 
+SLB?01		MLG Super Luigi Bros. Wii
 SLF?01		NSMBW3: The Final Levels
 SMN?03		Newer Super Mario Bros. Wii
 SMN?04		Canon Super Mario Bros. Wii
